# moxalise-api

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  GITHUB_ACTIONS.md  JOB_DEPLOYMENT.md  LICENSE  README.md  cloudbuild-job.yaml  coverage.xml  deploy.sh  entrypoint.sh  main.py  pyproject.toml  pytest.ini  run_job_local.sh  run_local.sh
.github/workflows/: ci.yml  deploy-job.yml  deploy.yml
src/moxalise/: __init__.py
src/moxalise/api/: __init__.py  app.py
src/moxalise/api/routes/: __init__.py  location.py  spreadsheet.py
src/moxalise/core/: __init__.py  config.py  dependencies.py  security.py
src/moxalise/models/: __init__.py  location.py  spreadsheet.py
src/moxalise/scripts/: __init__.py  job_runner.py  transfer_data.py
src/moxalise/services/: __init__.py  google_sheets.py
tests/: conftest.py
tests/integration/: test_api.py  test_location_api.py
tests/unit/: test_google_sheets_service.py  test_security.py  test_transfer_data.py
